--- a/app/(with-footer)/about/content.mdx
+++ b/app/(with-footer)/about/content.mdx
@@ -1,16 +1,23 @@
-# About Page
-## 2
-### 3
-#### 4
-##### 5
-###### 6
+# About
 
-Some stuff here
+**Million Neighborhoods Africa** provides the first-ever street-block level map of population and urban development for all of sub-Saharan Africa.
 
-- list 1
-- list 2
+The map uses a novel approach to estimate population and measure how well connected buildings are to street networks, which provide the basis for critical public services such as piped sewers, water lines, transit systems, and emergency services.
 
-1. ordered 1
-2. ordered 2
+Users of the map can answers two important questions:
 
-[hyperlink](https://google.com)
+1) **Which neighborhoods lack access to street networks, and thus, the critical public services that rely on them?**
+
+2) **Where do people live across neighborhoods, cities, and countries?**
+
+Bringing together geospatial algorithms, large scale datasets, and population censuses, this site simplifies the challenge facing planners hoping find which areas in their city most likely lack critical public services and help communities organize and advocate for service upgrades in their communities.
+
+The **Million Neighborhoods Africa** map was developed by a team of researchers at the University of Chicago, including faculty, staff, and students at the [Mansueto Institute for Urban Innovation](https://miurban.uchicago.edu/) and [Open Spatial Lab at the Data Science Institute](https://openspatial.io/) (OSL) in consultation with international partners, particularly [Slum/Shack Dwellers International](https://sdinet.org/) (SDI). Computational resources were made available through generous support from the [Research Computing Center](https://rcc.uchicago.edu/) (RCC).
+
+### Academic papers
+
+>Soman S, Beukes A, Nederhood C, Marchio N, Bettencourt LMA. Worldwide Detection of Informal Settlements via Topological Analysis of Crowdsourced Digital Maps. ISPRS International Journal of Geo-Information. 2020; 9(11):685. [https://doi.org/10.3390/ijgi9110685](https://doi.org/10.3390/ijgi9110685)
+>
+>Brelsford, C., Martin, T., Hand, J., Bettencourt, Luís M. A., Toward Cities without Slums: Topology and the Spatial Evolution of Neighborhoods (August 29, 2018). Science Advances. Vol. 4, no. 8, eaar4644. [https://doi.org/10.1126/sciadv.aar4644](https://doi.org/10.1126/sciadv.aar4644)
+>
+>Brelsford, C., Martin, T. Bettencourt, Luís M. A., Optimal Reblocking as a Practical Tool for Neighborhood Development (June 12, 2017) Sage Journals. [https://doi.org/10.1177/2399808317712715](https://doi.org/10.1177/2399808317712715)
