--- a/app/(with-footer)/about/content.mdx
+++ b/app/(with-footer)/about/content.mdx
@@ -10,7 +10,7 @@ Users of the map can answers two important questions:
 
 2) **Where do people live across neighborhoods, cities, and countries?**
 
-Bringing together geospatial algorithms, large scale datasets, and population censuses, this site simplifies the challenge facing planners hoping find which areas in their city most likely lack critical public services and help communities organize and advocate for service upgrades in their communities.
+Bringing together geospatial algorithms, large scale datasets, and population censuses, this site simplifies the challenge facing planners hoping find which areas in their city most likely lack critical public services and help communities advocate for service upgrades in their neighborhood.
 
 The **Million Neighborhoods Africa** map was developed by a team of researchers at the University of Chicago, including faculty, staff, and students at the [Mansueto Institute for Urban Innovation](https://miurban.uchicago.edu/) and [Open Spatial Lab at the Data Science Institute](https://openspatial.io/) (OSL) in consultation with international partners, particularly [Slum/Shack Dwellers International](https://sdinet.org/) (SDI). Computational resources were made available through generous support from the [Research Computing Center](https://rcc.uchicago.edu/) (RCC).
 
