--- a/app/(with-footer)/about/content.mdx
+++ b/app/(with-footer)/about/content.mdx
@@ -1,8 +1,8 @@
 # About
 
-**Million Neighborhoods Africa** provides the first-ever street-block level map of population and urban development for all of sub-Saharan Africa.
+**Million Neighborhoods Africa** provides the first-ever map of population and urban development at the street-block level for all of sub-Saharan Africa.
 
-The map uses a novel approach to estimate population and measure how well connected buildings are to street networks, which provide the basis for critical public services such as piped sewers, water lines, transit systems, and emergency services.
+The map uses a novel approach to estimate population and measure how well connected buildings are to surrounding street networks. Understanding the degree to which buildings connect to streets can provide insights into the well-being of people living there since streets provide the basis for critical public services such as piped sewers, water lines, transit systems, and emergency services.
 
 Users of the map can answers two important questions:
 
