--- a/app/(with-footer)/about/content.mdx
+++ b/app/(with-footer)/about/content.mdx
@@ -2,7 +2,7 @@
 
 **Million Neighborhoods Africa** provides the first-ever map of population and urban development at the street-block level for all of sub-Saharan Africa.
 
-The map uses a novel approach to estimate population and measure how well connected buildings are to surrounding street networks. Understanding the degree to which buildings access streets can reveal information about the well-being of people living in those areas since streets provide the basis for critical public services such as piped sewers, water lines, transit systems, waste collection, and emergency services.
+The map uses a novel approach to estimate population and measure how well connected buildings are to surrounding street networks. Understanding the degree to which buildings access streets can reveal information about the well-being of people living in those areas since streets provide the infrastructural basis for critical public services such as piped sewers, water lines, transit systems, waste collection, and emergency services.
 
 Users of the map can answers two important questions:
 
