--- a/app/(with-footer)/about/content.mdx
+++ b/app/(with-footer)/about/content.mdx
@@ -12,10 +12,11 @@ Users of the map can answer two important questions:
 
 Bringing together geospatial algorithms, large scale datasets, and population censuses, this site simplifies the challenge facing planners hoping to determine which areas in their city lack critical public services and the communities advocating for upgrades within their neighborhood.
 
-The **Million Neighborhoods Africa** map was developed by a team of researchers at the University of Chicago, including faculty, staff, and students at the [Mansueto Institute for Urban Innovation](https://miurban.uchicago.edu/) and [Open Spatial Lab at the Data Science Institute](https://openspatial.io/) (OSL) in consultation with international partners, particularly [Slum/Shack Dwellers International](https://sdinet.org/) (SDI). Computational resources were made available through generous support from the [Research Computing Center](https://rcc.uchicago.edu/) (RCC).
+The **Million Neighborhoods Africa** map was developed by a team of researchers at the University of Chicago, including faculty, staff, and students at the [Urban Science Lab](https://www.urban-science-lab.org/), [Mansueto Institute for Urban Innovation](https://miurban.uchicago.edu/), and [Open Spatial Lab at the Data Science Institute](https://openspatial.io/) (OSL) in consultation with international partners, particularly [Slum/Shack Dwellers International](https://sdinet.org/) (SDI). Computational resources were made available through generous support from the [Research Computing Center](https://rcc.uchicago.edu/) (RCC).
 
 ### Academic papers
-
+> Bettencourt, L.M.A., Marchio, N. Infrastructure deficits and informal settlements in sub-Saharan Africa. Nature (2025). [https://doi.org/10.1038/s41586-025-09465-2](https://doi.org/10.1038/s41586-025-09465-2)
+>
 >Soman S, Beukes A, Nederhood C, Marchio N, Bettencourt LMA. Worldwide Detection of Informal Settlements via Topological Analysis of Crowdsourced Digital Maps. ISPRS International Journal of Geo-Information. 2020; 9(11):685. [https://doi.org/10.3390/ijgi9110685](https://doi.org/10.3390/ijgi9110685)
 >
 >Brelsford, C., Martin, T., Hand, J., Bettencourt, Luís M. A., Toward Cities without Slums: Topology and the Spatial Evolution of Neighborhoods (August 29, 2018). Science Advances. Vol. 4, no. 8, eaar4644. [https://doi.org/10.1126/sciadv.aar4644](https://doi.org/10.1126/sciadv.aar4644)
